--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@
 # generated files
 bin/
 gen/
+build/
+dist/
+smali/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -18,3 +21,5 @@ local.properties
 # Eclipse project files
 .classpath
 .project
+*~
+apktool.yml
